data/derived/sp14/progs/unify/prog4243.ml.out
Characters 43-58:
  (g (f b),false)
  ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
